--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://pya-py.github.io/t3d",
+  "homepage": "pya-py.github.io/t3d",
   "name": "t3d",
   "version": "0.1.0",
   "private": true,
@@ -46,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
     "react-preloaders2": "^3.0.5"
   }
 }
