--- a/src/services/config.json
+++ b/src/services/config.json
@@ -2,6 +2,7 @@
     "serverRoot": "https://t3dweb.herokuapp.com",
     "localRoot": "http://localhost:4000",
     "webSocketRoot": "wss://t3dweb.herokuapp.com",
+    "webSocketLocalRoot": "ws://localhost:4000",
     "signupRoute": "signup",
     "signinRoute": "signin",
     "usersRoute": "users"
