--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
+    "react-preloaders2": "^3.0.5",
     "react-responsive": "^9.0.0-beta.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
@@ -46,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "react-preloaders2": "^3.0.5"
+    "gh-pages": "^3.2.3"
   }
 }
