--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
         "react-bootstrap": "^1.6.1",
         "react-dom": "^17.0.2",
         "react-preloaders2": "^3.0.5",
+        "react-redux": "^7.2.5",
         "react-responsive": "^9.0.0-beta.3",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "react-toastify": "^7.0.4",
+        "redux": "^4.1.1",
         "uuid": "^8.3.2",
         "web-vitals": "^1.0.1"
     },
