--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.1",
         "react-dom": "^17.0.2",
+        "react-multi-date-picker": "^3.1.6",
         "react-preloaders2": "^3.0.5",
         "react-redux": "^7.2.5",
         "react-responsive": "^9.0.0-beta.3",
