pya-py TicTacToe 3D Online Preview

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "http://pya-py.github.io/",
+    "homepage": "http://pya-py.github.io/t3d",
     "name": "t3d",
     "version": "0.1.0",
     "private": true,
