--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
-        "axios": "^0.21.1",
+        "axios": "^0.21.4",
         "react": "^17.0.2",
         "react-bootstrap": "^1.6.1",
         "react-dom": "^17.0.2",
@@ -20,8 +20,10 @@
         "react-scripts": "4.0.3",
         "react-toastify": "^7.0.4",
         "redux": "^4.1.1",
+        "set-value": "^4.0.1",
         "uuid": "^8.3.2",
-        "web-vitals": "^1.0.1"
+        "web-vitals": "^1.0.1",
+        "ws": "^8.2.2"
     },
     "scripts": {
         "start": "react-scripts start",
