--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
-        "axios": "^0.21.4",
+        "axios": "^0.22.0",
+        "jwt-decode": "^3.1.2",
         "react": "^17.0.2",
-        "react-bootstrap": "^1.6.1",
+        "react-avatar": "^3.10.0",
+        "react-bootstrap": "^1.6.4",
         "react-dom": "^17.0.2",
-        "react-multi-date-picker": "^3.1.6",
+        "react-multi-date-picker": "^3.1.7",
         "react-preloaders2": "^3.0.5",
         "react-redux": "^7.2.5",
-        "react-responsive": "^9.0.0-beta.3",
-        "react-router": "^5.2.0",
-        "react-router-dom": "^5.2.0",
+        "react-responsive": "^9.0.0-beta.4",
+        "react-router": "^5.2.1",
+        "react-router-dom": "^5.3.0",
         "react-scripts": "4.0.3",
-        "react-toastify": "^7.0.4",
+        "react-toastify": "^8.0.3",
         "redux": "^4.1.1",
-        "set-value": "^4.0.1",
-        "uuid": "^8.3.2",
-        "web-vitals": "^1.0.1",
-        "ws": "^8.2.2"
+        "set-value": "^4.1.0",
+        "web-vitals": "^1.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
