--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "react-scripts": "4.0.3",
         "react-toastify": "^8.0.3",
         "redux": "^4.1.1",
+        "redux-thunk": "^2.3.0",
         "set-value": "^4.1.0",
         "web-vitals": "^1.0.1"
     },
