--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-avatar": "^3.10.0",
         "react-bootstrap": "^1.6.4",
         "react-dom": "^17.0.2",
+        "react-google-recaptcha": "^2.1.0",
         "react-multi-date-picker": "^3.1.7",
         "react-preloaders2": "^3.0.5",
         "react-redux": "^7.2.5",
